Add npm scripts to prepare public directory before build and start
* Add cpy-cli and rimraf modules
* Add various clean / copy / create directories npm scripts
* Add prebuild and prestart npm scripts
* Add test css file
* Update webpack config filename

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link href="styles/test.css" rel="stylesheet">
   </head>
   <body>
     <div id="root">If you see this then something is wrong.</div>
