--- a/src/index.ejs
+++ b/src/index.ejs
@@ -1,9 +1,12 @@
 <html>
   <head>
+    <meta charset="utf-8">
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link href="styles/test.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="img/react.png">
+    <link href="styles/uikit.almost-flat.min.css" rel="stylesheet">
+    <link href="styles/fluxapp.css" rel="stylesheet">
   </head>
   <body>
-    <div id="root">If you see this then something is wrong.</div>
+    <div id="flux-app">If you see this then something is wrong.</div>
   </body>
 </html>
